--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - STTN_NEIGHBOR_STRIDE=${STTN_NEIGHBOR_STRIDE:- 5}
       - STTN_REFERENCE_LENGTH=${STTN_REFERENCE_LENGTH:- 10}
     volumes:
-      - ${DATA_DIR:- ./data}:/workspace/data
+      - ${DATA_DIR:- ./data}:/app/data
     deploy:
       resources:
         reservations:
